--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Taller Eventos</title>
 </head>
 <body>
-    
+    <button id="SaludarBtn" Saludar></button>
     <script src="eventos.js"></script>
 </body>
 </html>
