--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
 <head>
     <title>Taller Eventos</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="divPrincipal">
     <button id="saludarBtn" onclick="saludar()">Saludar</button>
+    </div>
     <script src="eventos.js"></script>
 </body>
 </html>
